# rust-backend-template

./: .containerignore  .dockerignore  .env.example  .envrc  .gitignore  .rustfmt.toml  Cargo.toml  clippy.toml  compose.dev.yml  dev-compose.yml  dev.compose.yml  flake.nix  justfile  prod.compose.yml  rust-analyzer.toml  rust-toolchain.toml  shell.nix
apps/ad_platform/: Cargo.toml  Dockerfile
apps/ad_platform/.sqlx/: query-7a4974cb1290e46c6f3b54b56e2666051393952ded206faa92509863fc1e9c0a.json
apps/ad_platform/application/: Cargo.toml
apps/ad_platform/application/src/repository/: mod.rs
apps/ad_platform/application/src/service/: hasher.rs  mod.rs  token.rs
apps/ad_platform/application/src/usecase/: mod.rs
apps/ad_platform/application/src/usecase/client/: error.rs  implementation.rs
apps/ad_platform/bootstrap/: Cargo.toml
apps/ad_platform/bootstrap/monolyth/: Cargo.toml  build.rs
apps/ad_platform/bootstrap/monolyth/src/: lib.rs
apps/ad_platform/bootstrap/monolyth/src/bootstrappers/: rest_api.rs
apps/ad_platform/bootstrap/monolyth/src/modules/: mod.rs  (+2 more)
apps/ad_platform/domain/: Cargo.toml
apps/ad_platform/domain/src/client/: age.rs  location.rs  login.rs
apps/ad_platform/domain/src/session/: entity.rs
apps/ad_platform/infrastructure/: Cargo.toml
apps/ad_platform/infrastructure/persistence/: Cargo.toml
apps/ad_platform/infrastructure/persistence/postgres/: Cargo.toml  build.rs
apps/ad_platform/infrastructure/services/: Cargo.toml
apps/ad_platform/infrastructure/services/hasher/: Cargo.toml
apps/ad_platform/presentation/: Cargo.toml
apps/ad_platform/presentation/api/rest/: Cargo.toml
apps/ad_platform/presentation/api/src/: lib.rs
apps/ad_platform/presentation/bot/: Cargo.toml
apps/ad_platform/src/: lib.rs
apps/ad_platform/src/bootstrappers/: rest_api.rs
apps/ad_platform/src/modules/: mod.rs  repositories.rs  services.rs
apps/template_example/: Cargo.toml  Containerfile  Dockerfile  build.rs
apps/template_example/.sqlx/: query-299e75091c544567bae8bdb861f62d479603c1bfe1de3a0a3f708aeb33158f60.json  query-75b8d9c14a54513e34fe86d4c8e37046c7afee460b83c1e799d31394dcf8c8d0.json
apps/template_example/application/: Cargo.toml
apps/template_example/application/src/: lib.rs
apps/template_example/application/src/repository/: client.rs  mod.rs  session.rs  user.rs
apps/template_example/application/src/service/: hasher.rs  mod.rs  secret_hasher.rs  token.rs
apps/template_example/application/src/usecase/: mod.rs
apps/template_example/domain/: Cargo.toml
apps/template_example/domain/src/: constraints.rs  email.rs  lib.rs  password.rs
apps/template_example/domain/src/client/: location.rs  mod.rs
apps/template_example/domain/src/session/: entity.rs  mod.rs
apps/template_example/domain/src/user/: avatar_url.rs  constraints.rs  email.rs  mod.rs  name.rs  password.rs  surname.rs
apps/template_example/infrastructure/: Cargo.toml
apps/template_example/infrastructure/persistence/: Cargo.toml
apps/template_example/infrastructure/persistence/postgres/: Cargo.toml
apps/template_example/infrastructure/persistence/redis/: Cargo.toml
apps/template_example/infrastructure/persistence/src/: lib.rs
apps/template_example/infrastructure/services/: Cargo.toml
apps/template_example/infrastructure/services/hasher/: Cargo.toml
apps/template_example/infrastructure/services/token/: Cargo.toml
apps/template_example/presentation/: Cargo.toml
apps/template_example/presentation/api/: Cargo.toml
apps/template_example/presentation/api/rest/: Cargo.toml
apps/template_example/presentation/bot/: Cargo.toml
apps/template_example/presentation/bot/telegram/: Cargo.toml
apps/template_example/src/: config.rs  lib.rs
apps/template_example/src/bootstrappers/: mod.rs  rest_api.rs
apps/template_example/src/bootstrappers/rest_api/: config.rs  mod.rs
apps/template_example/src/features/: mod.rs
apps/template_example/src/features/user/: mod.rs
apps/template_example/src/features/user_auth/: mod.rs
apps/template_example/src/modules/: config.rs  mod.rs  repositories.rs  services.rs
apps/template_example/src/modules/repositories/: config.rs  mod.rs
apps/template_example/src/modules/services/: config.rs  mod.rs
apps/template_example/src/shared/domain/: constraints.rs  email.rs  mod.rs  password.rs
crates/ad_platform/bootstrap/monolyth/: Cargo.toml
crates/ad_platform/bootstrap/monolyth/src/: lib.rs
crates/ad_platform/bootstrap/rest-api/: Cargo.toml
crates/ad_platform/bootstrap/rest-api/src/: lib.rs  main.rs  modules.rs
crates/ad_platform/infrastructure/: Cargo.toml
crates/ad_platform/infrastructure/instrumentation/opentelemetry/: Cargo.toml
crates/ad_platform/infrastructure/persistence/postgres/: Cargo.toml
crates/ad_platform/infrastructure/persistence/redis/: Cargo.toml
crates/ad_platform/infrastructure/service/jwt/: Cargo.toml
crates/ad_platform/infrastructure/services/src/: lib.rs
crates/ad_platform/infrastructure/services/token/: Cargo.toml
crates/ad_platform/infrastructure/src/: lib.rs
crates/ad_platform/kernel/: Cargo.toml
crates/ad_platform/kernel/src/: lib.rs
crates/ad_platform/kernel/src/domain/: error.rs  mod.rs
crates/lib/: Cargo.toml
crates/lib/bootstrap/: Cargo.toml
crates/lib/bootstrap/src/: openapi.rs
crates/lib/domain/: Cargo.toml
crates/lib/domain/src/validation/: error.rs  mod.rs
crates/lib/infrastructure/: Cargo.toml
crates/lib/infrastructure/instrumentation/opentelemetry/: Cargo.toml
crates/lib/infrastructure/instrumentation/src/: lib.rs
crates/lib/infrastructure/persistence/: Cargo.toml
crates/lib/infrastructure/persistence/postgres/: Cargo.toml
crates/lib/infrastructure/persistence/src/: lib.rs
crates/lib/kernel/: Cargo.toml
crates/lib/kernel/src/domain/: mod.rs
crates/lib/macros/: Cargo.toml
crates/lib/macros/proc/: Cargo.toml
crates/lib/macros/proc/src/: domain_type.rs  lib.rs
crates/lib/macros/src/: jemalloc.rs  lib.rs
crates/lib/presentation/api/rest/: Cargo.toml
crates/lib/presentation/bot/telegram/: Cargo.toml
crates/lib/src/: lib.rs
(+302 files in other folders)
