[workspace]
resolver = "3"
members = ["packages/lib-backend", "apps/ad_platform"]

[workspace.package]
authors = ["Kirill Udaltsov <me@udaltsovk.ru>"]
edition = "2024"

[workspace.dependencies]
lib = { path = "./packages/lib-backend" }

async-trait = "0.1"
axum = "0.8"
bon = "3.7"
derive-where = "1.6"
chrono = "0.4"
env-vars-config = "1.0"
metrics = "0.24"
rstest = "0.26"
serde = "1.0"
sqlx = "0.8"
tap = "1.0"
tikv-jemallocator = "0.6"
thiserror = "2.0"
tokio = "1.47"
tower = "0.5"
tracing = "0.1"
uuid = "1.18"

# TODO: use utoipa from crates.io when https://github.com/juhaku/utoipa/pull/1329 and https://github.com/juhaku/utoipa/pull/1423 merged
utoipa = { git = "https://github.com/NikSneMC/utoipa" }
utoipa-axum = { git = "https://github.com/NikSneMC/utoipa" }
utoipa-scalar = { git = "https://github.com/NikSneMC/utoipa" }


[profile.release]
lto = "fat"
strip = true
opt-level = 3
panic = "unwind"
codegen-units = 1

[workspace.lints.rust]
unknown_lints = "allow"

# Arithmetic
arithmetic_overflow = "deny" # Prevent operations that would cause integer overflow

# Unsafe code detection
unnecessary_transmutes = "deny" # Prevent unsafe transmutation from integers to characters or floats

[workspace.lints.clippy]
# Ungrouped
branches_sharing_code = "warn"
clear_with_drain = "warn"
coerce_container_to_any = "warn"
collection_is_never_read = "warn"
debug_assert_with_mut_call = "deny"
derive_partial_eq_without_eq = "warn"
equatable_if_let = "warn"
fallible_impl_from = "warn"
future_not_send = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_on_single_items = "warn"
iter_with_drain = "warn"
large_stack_frames = "warn"
literal_string_with_formatting_args = "warn"
missing_const_for_fn = "warn"
needless_collect = "warn"
needless_pass_by_ref_mut = "warn"
non_send_fields_in_send_ty = "warn"
nonstandard_macro_braces = "warn"
option_if_let_else = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
redundant_pub_crate = "warn"
set_contains_or_insert = "warn"
significant_drop_in_scrutinee = "warn"
significant_drop_tightening = "warn"
single_option_map = "warn"
string_lit_as_bytes = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
too_long_first_doc_paragraph = "warn"
trait_duplication_in_bounds = "warn"
trivial_regex = "warn"
tuple_array_conversions = "warn"
type_repetition_in_bounds = "warn"
unnecessary_struct_initialization = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
use_self = "warn"
useless_let_if_seq = "warn"
while_float = "warn"

# Ungrouped
assigning_clones = "warn"
bool_to_int_with_if = "warn"
case_sensitive_file_extension_comparisons = "warn"
cast_lossless = "warn"
cloned_instead_of_copied = "warn"
comparison_chain = "warn"
copy_iterator = "warn"
default_trait_access = "warn"
doc_broken_link = "deny"
doc_comment_double_space_linebreaks = "warn"
doc_link_with_quotes = "deny"
doc_markdown = "deny"
elidable_lifetime_names = "warn"
empty_enums = "warn"
enum_glob_use = "forbid"
expl_impl_clone_on_copy = "warn"
explicit_deref_methods = "warn"
explicit_into_iter_loop = "warn"
explicit_iter_loop = "warn"
filter_map_next = "warn"
flat_map_option = "warn"
float_cmp = "warn"
fn_params_excessive_bools = "deny"
format_collect = "warn"
format_push_string = "warn"
from_iter_instead_of_collect = "warn"
if_not_else = "warn"
ignore_without_reason = "warn"
ignored_unit_patterns = "warn"
implicit_clone = "warn"
inconsistent_struct_constructor = "warn"
index_refutable_slice = "warn"
inefficient_to_string = "warn"
into_iter_without_iter = "warn"
invalid_upcast_comparisons = "warn"
ip_constant = "warn"
items_after_statements = "warn"
iter_filter_is_ok = "warn"
iter_filter_is_some = "warn"
iter_not_returning_iterator = "warn"
iter_without_into_iter = "warn"
large_digit_groups = "warn"
large_futures = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
linkedlist = "warn"
macro_use_imports = "warn"
manual_assert = "warn"
manual_instant_elapsed = "warn"
manual_is_power_of_two = "warn"
manual_is_variant_and = "warn"
manual_let_else = "warn"
manual_midpoint = "warn"
manual_string_new = "warn"
many_single_char_names = "warn"
map_unwrap_or = "warn"
match_same_arms = "warn"
maybe_infinite_iter = "warn"
mismatching_type_param_order = "warn"
# missing_errors_doc = "warn" # TODO: uncomment
missing_fields_in_debug = "warn"
# missing_panics_doc = "warn" # TODO: uncomment
must_use_candidate = "warn"
mut_mut = "warn"
naive_bytecount = "warn"
needless_bitwise_bool = "warn"
needless_continue = "warn"
needless_for_each = "warn"
needless_pass_by_value = "warn"
needless_raw_string_hashes = "warn"
no_effect_underscore_binding = "warn"
non_std_lazy_statics = "warn"
option_as_ref_cloned = "warn"
pub_underscore_fields = "warn"
range_minus_one = "warn"
range_plus_one = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
ref_binding_to_reference = "warn"
ref_option = "warn"
ref_option_ref = "warn"
return_self_not_must_use = "warn"
same_functions_in_if_condition = "warn"
self_only_used_in_recursion = "warn"
semicolon_if_nothing_returned = "warn"
should_panic_without_expect = "warn"
similar_names = "warn"
single_char_pattern = "warn"
stable_sort_primitive = "warn"
str_split_at_newline = "warn"
string_add_assign = "warn"
struct_excessive_bools = "warn"
struct_field_names = "warn"
too_many_lines = "warn"
trivially_copy_pass_by_ref = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_debug_formatting = "warn"
unnecessary_join = "warn"
unnecessary_literal_bound = "warn"
unnecessary_semicolon = "warn"
unnecessary_wraps = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "warn"
unused_async = "warn"
unused_self = "warn"
used_underscore_binding = "warn"
used_underscore_items = "warn"
verbose_bit_mask = "warn"
wildcard_imports = "forbid"
zero_sized_map_values = "warn"

# Ungrouped
allow_attributes = "deny"
allow_attributes_without_reason = "deny"
assertions_on_result_states = "deny"
cfg_not_test = "warn"
clone_on_ref_ptr = "warn"
cognitive_complexity = "warn"
create_dir = "warn"
decimal_literal_representation = "warn"
default_numeric_fallback = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
doc_include_without_cfg = "warn"
doc_paragraphs_missing_punctuation = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
error_impl_error = "warn"
exit = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
get_unwrap = "warn"
if_then_some_else_none = "warn"
impl_trait_in_params = "warn"
infinite_loop = "warn"
iter_over_hash_type = "warn"
large_include_file = "warn"
let_underscore_must_use = "warn"
let_underscore_untyped = "warn"
lossy_float_literal = "warn"
map_with_unused_argument_over_ranges = "warn"
mem_forget = "warn"
missing_assert_message = "warn"
missing_asserts_for_indexing = "warn"
# missing_docs_in_private_items = "warn" # TODO: uncomment this
mixed_read_write_in_expression = "warn"
mutex_atomic = "warn"
mutex_integer = "warn"
needless_raw_strings = "warn"
non_zero_suggestions = "warn"
panic_in_result_fn = "warn"
pathbuf_init_then_push = "warn"
pointer_format = "warn"
precedence_bits = "warn"
print_stderr = "warn"
print_stdout = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_test_prefix = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
semicolon_inside_block = "warn"
shadow_unrelated = "warn"
string_add = "warn"
string_slice = "warn"
suspicious_xor_used_as_pow = "warn"
tests_outside_test_module = "warn"
try_err = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unreachable = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_in_result = "warn"
verbose_file_reads = "warn"

# Arithmetic
checked_conversions = "deny"        # Suggest using checked conversions between numeric types
cast_possible_truncation = "deny"   # Detect when casting might truncate a value
cast_sign_loss = "deny"             # Detect when casting might lose sign information
cast_possible_wrap = "deny"         # Detect when casting might cause value to wrap around
cast_precision_loss = "deny"        # Detect when casting might lose precision
integer_division = "deny"           # Highlight potential bugs from integer division truncation
arithmetic_side_effects = "deny"    # Detect arithmetic operations with potential side effects
unchecked_time_subtraction = "deny" # Ensure duration subtraction won't cause underflow

# Unwraps
unwrap_used = "deny"       # Discourage using .unwrap() which can cause panics
panicking_unwrap = "deny"  # Prevent unwrap on values known to cause panics
option_env_unwrap = "deny" # Prevent unwrapping environment variables which might be absent

# Array indexing
indexing_slicing = "deny" # Avoid direct array indexing and use safer methods like .get()

# Path handling
join_absolute_paths = "deny" # Prevent issues when joining paths with absolute paths

# Serialization issues
serde_api_misuse = "deny" # Prevent incorrect usage of Serde's serialization/deserialization API

# Unbounded input
uninit_vec = "deny" # Prevent creating uninitialized vectors which is unsafe

# Unsafe code detection
transmute_ptr_to_ref = "deny"     # Prevent unsafe transmutation from pointers to references
transmute_undefined_repr = "deny" # Detect transmutes with potentially undefined representations
