[package]
name = "ad_platform-domain"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
lib = { workspace = true, features = ["domain", "macros-proc"] }

# async-trait.workspace = true
derive-where.workspace = true
tap.workspace = true
# tracing.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["v7"] }

[lints]
workspace = true
