[package]
name = "ad_platform-presentation"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[features]
api = ["dep:api"]
api-rest = ["api", "api/rest"]

bot = ["dep:bot"]

[dependencies]
api = { path = "./api", package = "ad_platform-presentation-api", optional = true }
bot = { path = "./bot", package = "ad_platform-presentation-bot", optional = true }

[lints]
workspace = true
