[package]
name = "template_example-application"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
lib = { workspace = true, features = ["domain", "application"] }
domain = { path = "../domain", package = "template_example-domain" }

derive-where.workspace = true
tracing.workspace = true
thiserror.workspace = true

pastey = "0.2.1"

[lints]
workspace = true
