[package]
name = "template_example-domain"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
lib = { workspace = true, features = ["domain", "macros-proc"] }

bon.workspace = true
serde.workspace = true
thiserror.workspace = true

rust_iso3166 = "0.1"
url = "2.5"

[lints]
workspace = true
