[package]
name = "ad_platform-kernel"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[dependencies]
lib = { workspace = true, features = ["kernel", "macros_proc"] }

async-trait.workspace = true
derive-where.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["v7"] }

[lints]
workspace = true
