[package]
name = "lib-bootstrap"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[features]
openapi = ["dep:serde_json", "dep:thiserror", "dep:utoipa"]

[dependencies]
serde_json = { version = "1.0", optional = true }
thiserror = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }

[lints]
workspace = true 
