[package]
name = "ad_platform-monolyth"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ad_platform-monolyth"
path = "./src/bin/main.rs"

[[bin]]
name = "ad_platform-openapi"
path = "./src/bin/openapi.rs"

[dependencies]
lib = { workspace = true, features = [
  "bootstrap-openapi",
  "infrastructure-instrumentation-opentelemetry-grpc-tonic",
  "infrastructure-persistence-postgres",
] }
domain = { path = "../../domain", package = "ad_platform-domain" }
application = { path = "../../application", package = "ad_platform-application" }
infrastructure = { path = "../../infrastructure", package = "ad_platform-infrastructure", features = [
  "persistence-postgres",
  "services-hasher-argon2",
  "services-token-jwt",
] }
presentation = { path = "../../presentation", package = "ad_platform-presentation", features = [
  "api-rest",
] }

async-trait.workspace = true
env-vars-config.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tracing.workspace = true
utoipa.workspace = true

axum-prometheus = "0.9"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = { workspace = true, features = [
  "profiling",
  "unprefixed_malloc_on_supported_platforms",
] }

[lints]
workspace = true
