[package]
name = "ad_platform-infrastructure-services"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[features]
hasher = ["dep:hasher"]
hasher_argon2 = ["hasher/argon2"]

token = ["dep:token"]
token_jwt = ["token/jwt"]

[dependencies]
hasher = { path = "./hasher", package = "ad_platform-infrastructure-services-hasher", optional = true }
token = { path = "./token", package = "ad_platform-infrastructure-services-token", optional = true }

[lints]
workspace = true
