[package]
name = "ad_platform-presentation-bot"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[features]
telegram = ["dep:telegram"]

[dependencies]
telegram = { path = "./telegram", package = "ad_platform-presentation-bot-telegram", optional = true }

[lints]
workspace = true
